tests/basic/and/and_01.pan.out
tests/basic/and/and_01.pan:5:1-4: error: unable to verify type of f20
tests/basic/and/and_01.pan:8:1-4: error: unable to verify type of f21
tests/basic/and/and_01.pan:11:1-4: error: unable to verify type of f22
tests/basic/and/and_01.pan:14:1-4: error: unable to verify type of f23